@@ -1,5 +1,7 @@
 Version 0.9.2-devel
 -------------------
+- Embed the suggestion dialog in an iframe, so that the CSS styles
+  of the main page do not interfere with our styles.
 
 
 Version 0.9.1 [07 Aug 2015]
